# gaspetto

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  arduino-hw_test.code-workspace  arduino_straight_drive.code-workspace  cubetto.stl  gaspetto-arduino-soft.code-workspace  gaspetto-box_pio.code-workspace  gaspetto-car-pio.code-workspace  gaspetto-car.code-workspace  gaspetto-emu-pc.code-workspace  gaspetto-src.code-workspace  generic_boot20_pc13_fastboot.bin.bmcfg  hal-hw_test.code-workspace  mpu_plot.code-workspace  nrf-sender-pio.code-workspace
.github/workflows/: ci.yml
FreeCad/: gaspetta-box.20250405-214034.FCBak  gaspetta-box.20250407-132817.FCBak  gaspetta-box.FCStd  gaspetto-box.FCStd
car/: .gdbinit  BuzzerT.cpp  car.code-workspace  car.ino
car_test/: car_test.ino
emmerson-website/emersonmello.me/: robots.txt
kicad/L9110/: README.md
kicad/gaspemobil/: gaspetto.kicad_pro  gaspetto.kicad_sch
kicad/gaspetto/: gaspetto.kicad_prl  gaspetto.kicad_pro  gaspetto.kicad_sch
kicad/prototipo-stm32-nrf24l01/: prototipo.kicad_prl  prototipo.kicad_pro  prototipo.kicad_sch-bak  prototipo_gaspetto_box.kicad_prl  prototipo_gaspetto_box.kicad_pro  prototipo_gaspetto_box.kicad_sch  prototipo_gaspetto_car.kicad_prl  prototipo_gaspetto_car.kicad_pro  (+4 more)
simple_dc_control/: simple_dc_control.code-workspace  simple_dc_control.ino
soft/: .clang-format  .cmake-format  .gdbinit  .gitignore
soft/emu-pc/: .clang-tidy  CMakeLists.txt  CMakePresets.json  Makefile  README.md
soft/emu-pc/arduino_framework/: Arduino.cpp  Arduino.h  Arduino_pins_pc.h  CMakeLists.txt  GaspettoCar_ino.h  README.md  RF24.cpp  RF24.h  Serial.cpp  Serial.h  main.cpp
soft/emu-pc/arduino_framework/Adafruit_MPU6050/: Adafruit_MPU6050.h  Adafruit_Sensor.h
soft/emu-pc/arduino_framework/HardwareTimer/: HardwareTimer.cpp  HardwareTimer.h
soft/emu-pc/arduino_framework/PID_v1/: PID_v1.cpp  PID_v1.h
soft/emu-pc/arduino_framework/RF24/: RF24.cpp  RF24.h
soft/emu-pc/arduino_framework/implementations/include/: GaspettoCar_ino.h  implementations.h
soft/emu-pc/arduino_framework/implementations/src/: gaspetto_box.cpp  gaspetto_car.cpp  nrf_sender.cpp
soft/emu-pc/arduino_framework/include/: Arduino.h  Arduino_pins_pc.h  Serial.h  Wire.h  __assert.h  printf.h
soft/emu-pc/cmake/: Cache.cmake  CompilerOptimizations.cmake  CompilerWarnings.cmake  Doxygen.cmake  PrecompiledHeaders.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
soft/emu-pc/gaspetto_box/: CMakeLists.txt  GaspettoBox.cpp  GaspettoBox.h  IdleState.h  ProcessingState.cpp  ReadHall.h
soft/emu-pc/gaspetto_box/src/: GaspettoBox.cpp  IdleState.cpp
soft/emu-pc/gaspetto_car/: CMakeLists.txt  GaspettoCar.cpp  GaspettoCar.h  IdleState.cpp  MotorController.cpp  MotorController.h  ProcessingState.cpp  ProcessingState.h  RadioController.cpp  RadioController.h  main.cpp  pid_controller.cpp  pid_controller.h
soft/emu-pc/gaspetto_car/include/: GaspettoCar.h
soft/emu-pc/gaspetto_car/src/: GaspettoCar.cpp  main.cpp
soft/emu-pc/motor_controller/: CMakeLists.txt
soft/emu-pc/motor_controller/include/: MotorController.h
soft/emu-pc/motor_controller/src/: MotorController.cpp
soft/emu-pc/radio_controller/: CMakeLists.txt  README.md
soft/emu-pc/radio_controller/include/: RadioController.h  config_radio.h
soft/emu-pc/radio_controller/include/radio_controller/: defs.h
soft/emu-pc/radio_controller/src/: RadioController.cpp
soft/emu-pc/read_hall/: CMakeLists.txt  README.md
soft/emu-pc/read_hall/src/: ReadHall.cpp
soft/emu-pc/state_machine_framework/: ActiveObject.h  CMakeLists.txt  Event.h  EventQueue.h  MotorEvent.h  README.md  RadioEvent.h  State.h  TimeredEventQueue.cpp  TimeredEventQueue.h
soft/emu-pc/state_machine_framework/include/: ActiveObject.h  Event.h  EventQueue.h  Log.h  LogData.h  State.h  TimeredEventQueue.h  config_event.h
soft/emu-pc/state_machine_framework/src/: EventQueue.cpp  TimeredEventQueue.cpp
soft/emu-pc/targets/gaspetto_box/: CMakeLists.txt  README.md  send_values.cpp
soft/emu-pc/targets/gaspetto_box/include/: Context.h  GaspettoBox.h  IdleState.h  ProcessingState.h
soft/emu-pc/targets/gaspetto_box/src/: GaspettoBox.cpp  IdleState.cpp  ProcessingState.cpp  Untitled-1.c  main.cpp
soft/emu-pc/targets/gaspetto_car/: CMakeLists.txt  README.md
soft/emu-pc/targets/gaspetto_car/include/: Context.h  GaspettoCar.h  IdleState.h  ProcessingState.h
soft/emu-pc/targets/gaspetto_car/motor_controller/: CMakeLists.txt
soft/emu-pc/targets/gaspetto_car/motor_controller/include/: MotorController.h  config_motor.h
soft/emu-pc/targets/gaspetto_car/motor_controller/src/: MotorController.cpp
soft/emu-pc/targets/gaspetto_car/movement_controller/: CMakeLists.txt
soft/emu-pc/targets/gaspetto_car/movement_controller/include/: IMUOrientation.h  IMUOrientationInterface.h  MotorControl.h  MotorControlInterface.h  MovementController.h
soft/emu-pc/targets/gaspetto_car/movement_controller/src/: IMUOrientation.cpp  MotorControl.cpp  MovementController.cpp
soft/emu-pc/targets/gaspetto_car/src/: GaspettoCar.cpp  IdleState.cpp  ProcessingState.cpp  main.cpp
soft/emu-pc/targets/nrf_sender/: CMakeLists.txt  README.md
soft/emu-pc/targets/nrf_sender/src/: main.cpp
soft/emu-pc/tests/: Arduino.h  CMakeLists.txt  README.md  fixture.cpp  fixture.h  main.cpp  mock_MotorController.cpp  mock_MotorController.h  mock_RF24.h  mock_RadioController.cpp  mock_RadioController.h  mock_arduino.cpp  mock_arduino.h
soft/emu-pc/tests/gaspetto_car/: test_motor_controller.cpp  test_movement_controller.cpp  test_radio_controller.cpp  test_system.cpp
soft/emu-pc/tests/mocks/: mock_Arduino.h  mock_IMUOrientation.cpp  mock_IMUOrientation.h  mock_MotorControl.cpp  mock_MotorControl.h  mock_MotorController.cpp  mock_MotorController.h  mock_PID_v1.h  mock_RF24.cpp  mock_RF24.h  mock_RadioController.cpp  mock_RadioController.h  mock_arduino.cpp  mock_arduino.h  mock_base.h  stub_RF24.cpp
tools/: build-gaspetto-coverage  build-gaspetto-pc  build-gaspetto-pio  build-gaspetto-utest  check-format  pre_build.py  run-clang-tidy  run-cppcheck
(+307 files in other folders)
